Add and install terms and conditions document
This was exported from the Oct 10, 2014 EOS Terms of Use Google doc. The
pdf contains links to the license service at http://localhost:3010. In
case it's needed again, this nasty sed removed the URL wrapping that
Google applies:

sed -i.bak \
  '/^\/URI /{
    s,(https\?://www.google.com/url?q=,(,;
    s,%3A,:,g;
    s,%2F,/,g;
    s,&sa.*),),;
  }'

[endlessm/eos-shell#3930]

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,6 +4,8 @@ dist_js_DATA = \
 	licenseCrawler.js \
 	$(NULL)
 
+dist_pkgdata_DATA = EndlessOS-terms-conditions.pdf
+
 eos-license-service.service: eos-license-service.service.in Makefile
 	@sed -e "s|\@pkgdatadir\@|$(pkgdatadir)|" $< > $@
 systemdsystemunit_DATA = eos-license-service.service
