--- a/configure.ac
+++ b/configure.ac
@@ -8,6 +8,8 @@ AM_MAINTAINER_MODE([enable])
 AM_SILENT_RULES([yes])
 
 PKG_PROG_PKG_CONFIG
+AC_PROG_MKDIR_P
+AC_PATH_PROG([UNOCONV], [unoconv])
 
 # systemd
 AC_ARG_WITH([systemdsystemunitdir],
