build: don't hardcode the list of languages
Get it from the directories inside terms/ instead.

--- a/Makefile.am
+++ b/Makefile.am
@@ -8,20 +8,20 @@ dist_js_DATA = \
 	licenseCrawler.js \
 	$(NULL)
 
-terms_languages = "C" "es"
 filename = "Endless-Mobile-Terms-of-Use.docx"
 targetfilename = "Endless-Mobile-Terms-of-Use.pdf"
-TERMS_ORIG_FILES=$(shell LANGUAGES="$(terms_languages)"; for language in $$LANGUAGES; do find $(srcdir)/terms/$$language/$(filename); done)
+TERMS_LANGUAGES=$(shell ls $(srcdir)/terms)
+TERMS_ORIG_FILES=$(shell LANGUAGES="$(TERMS_LANGUAGES)"; for language in $$LANGUAGES; do find $(srcdir)/terms/$$language/$(filename); done)
 
 install-data-local:
-	for language in $(terms_languages); do \
+	for language in $(TERMS_LANGUAGES); do \
 		echo -e "Generating PDF files for $$language"; \
 		$(MKDIR_P) $(DESTDIR)$(pkgdatadir)/terms/$$language; \
 		$(UNOCONV) -f pdf -o $(DESTDIR)$(pkgdatadir)/terms/$$language/$(targetfilename) $(srcdir)/terms/$$language/$(filename); \
 	done
 
 uninstall-local:
-	for language in $(terms_languages); do \
+	for language in $(TERMS_LANGUAGES); do \
 		rm -f $(DESTDIR)$(pkgdatadir)/terms/$$language/$(targetfilename); \
 	done
 
