--- a/Makefile.am
+++ b/Makefile.am
@@ -2,6 +2,8 @@ DISTCHECK_CONFIGURE_FLAGS = \
 	--with-systemdsystemunitdir=$$dc_install_base/$(systemdsystemunitdir) \
 	$(NULL)
 
+.NOTPARALLEL:
+
 jsdir = $(pkgdatadir)
 dist_js_DATA = \
 	licenseApp.js \
