Revert "Add build-dep on unoconv"
This reverts commit 6a170c76976a479841f06e594927d14aa215695c.

--- a/debian/control
+++ b/debian/control
@@ -6,8 +6,7 @@ Build-Depends: debhelper (>= 9),
 	dh-autoreconf,
 	dh-systemd,
 	systemd,
-	eos-node-modules-dev,
-	unoconv
+	eos-node-modules-dev
 Standards-Version: 3.8.0
 Homepage: http://www.endlessm.com
 
