Refer to company as Endless
Other than formal references to the full company name
(Endless Mobile, Inc.), we will simply use the name Endless
(rather than Endless Mobile).

[endlessm/eos-shell#4791]

--- a/Makefile.am
+++ b/Makefile.am
@@ -8,8 +8,8 @@ dist_js_DATA = \
 	licenseCrawler.js \
 	$(NULL)
 
-filename = "Endless-Mobile-Terms-of-Use.docx"
-targetfilename = "Endless-Mobile-Terms-of-Use.pdf"
+filename = "Endless-Terms-of-Use.docx"
+targetfilename = "Endless-Terms-of-Use.pdf"
 TERMS_LANGUAGES=$(shell ls $(srcdir)/terms)
 TERMS_PDF_FILES=$(shell LANGUAGES="$(TERMS_LANGUAGES)"; for language in $$LANGUAGES; do find $(srcdir)/terms/$$language/$(targetfilename); done)
 
