--- a/debian/control
+++ b/debian/control
@@ -5,6 +5,7 @@ Maintainer: Cosimo Cecchi <cosimo@endlessm.com>
 Build-Depends: debhelper (>= 9),
 	dh-autoreconf,
 	dh-systemd,
+	pkg-config,
 	systemd,
 	eos-node-modules-dev
 Standards-Version: 3.8.0
