Run as 'nobody', in a sandbox
Previously, this service ran as root, and was unconfined.

ProtectHome=true is implemented by mounting a read-only empty tmpfs over
/home, which is no good on an unconverted system because /home is only a
symlink to /sysroot/home anyway!

This list of settings is cargo-culted from
https://github.com/endlessm/mogwai/blob/master/mogwai-scheduled/mogwai-scheduled.service.in#L13
with the exception that GJS uses a JIT so MemoryDenyWriteExecute=yes
cannot be used.

https://phabricator.endlessm.com/T20857

--- a/eos-license-service.service.in
+++ b/eos-license-service.service.in
@@ -4,3 +4,27 @@ Wants=network.target
 
 [Service]
 ExecStart=/usr/bin/gjs -I @pkgdatadir@ @pkgdatadir@/licenseApp.js
+User=nobody
+
+# Sandboxing
+CapabilityBoundingSet=
+Environment=GIO_USE_VFS=local
+Environment=GSETTINGS_BACKEND=memory
+Environment=GVFS_DISABLE_FUSE=1
+Environment=GVFS_REMOTE_VOLUME_MONITOR_IGNORE=1
+InaccessiblePaths=/sysroot/home
+NoNewPrivileges=yes
+PrivateDevices=yes
+PrivateNetwork=yes
+PrivateTmp=yes
+PrivateUsers=yes
+ProtectControlGroups=yes
+ProtectHome=yes
+ProtectKernelModules=yes
+ProtectKernelTunables=yes
+ProtectSystem=strict
+RestrictAddressFamilies=AF_UNIX
+RestrictRealtime=yes
+SystemCallArchitectures=native
+SystemCallErrorNumber=EPERM
+SystemCallFilter=~@clock @cpu-emulation @debug @keyring @module @mount @obsolete @privileged @raw-io @resources
